--- a/Blog-Skeleton/Blog/packages.config
+++ b/Blog-Skeleton/Blog/packages.config
@@ -46,6 +46,14 @@
   <package id="MsBuild.NuGet.Pack" version="2.0.0" targetFramework="net46" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
   <package id="NUnit" version="3.6.1" targetFramework="net452" />
+  <package id="NUnit.Console" version="3.6.1" targetFramework="net46" />
+  <package id="NUnit.ConsoleRunner" version="3.6.1" targetFramework="net46" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net46" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net46" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net46" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net46" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net46" />
+  <package id="NUnit.Runners" version="3.6.1" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="Selenium.Support" version="3.4.0" targetFramework="net452" />
