--- a/Blog-Skeleton/BlogIntegrationTests/packages.config
+++ b/Blog-Skeleton/BlogIntegrationTests/packages.config
@@ -2,6 +2,10 @@
 <packages>
   <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
   <package id="Dapper" version="1.50.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="NUnit" version="3.6.1" targetFramework="net45" />
   <package id="NUnit.ConsoleRunner" version="3.6.1" targetFramework="net45" />
   <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net45" />
