--- a/Blog-Skeleton/BlogIntegrationTests/packages.config
+++ b/Blog-Skeleton/BlogIntegrationTests/packages.config
@@ -17,5 +17,6 @@
   <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net45" />
   <package id="Selenium.Support" version="2.53.0" targetFramework="net45" />
   <package id="Selenium.WebDriver" version="2.53.0" targetFramework="net45" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.29.0" targetFramework="net45" />
   <package id="TestStack.Seleno" version="0.9.61" targetFramework="net45" />
 </packages>
