--- a/Blog-Skeleton/BlogIntegrationTests/Blog.Integration.Tests.csproj
+++ b/Blog-Skeleton/BlogIntegrationTests/Blog.Integration.Tests.csproj
@@ -93,12 +93,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\AccessExcelData.cs" />
+    <Compile Include="Models\LoginUser.cs" />
     <Compile Include="Pages\BasePage.cs" />
     <Compile Include="BrowserHost.cs" />
-    <Compile Include="IntegrationTests.Registration.cs" />
+    <Compile Include="IntegrationTestsRegistration.cs" />
     <Compile Include="Models\RegistrationUser.cs" />
     <Compile Include="Pages\HomePage\HomePage.cs" />
     <Compile Include="Pages\HomePage\HomePageMap.cs" />
+    <Compile Include="Pages\LoginPage\LoginPage.cs" />
+    <Compile Include="Pages\LoginPage\LoginPageAsserter.cs" />
+    <Compile Include="Pages\LoginPage\LoginPageMap.cs" />
     <Compile Include="Pages\RegistrationPage\RegistrationPage.cs" />
     <Compile Include="Pages\RegistrationPage\RegistrationPageAsserter.cs" />
     <Compile Include="Pages\RegistrationPage\RegistrationPageMap.cs" />
@@ -106,6 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <Compile Include="IntegrationTestsLogin.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
