--- a/Blog-Skeleton/BlogIntegrationTests/Blog.Integration.Tests.csproj
+++ b/Blog-Skeleton/BlogIntegrationTests/Blog.Integration.Tests.csproj
@@ -92,11 +92,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IntegrationTestsLogin.cs" />
     <Compile Include="Models\AccessExcelData.cs" />
     <Compile Include="Models\LoginUser.cs" />
     <Compile Include="Pages\BasePage.cs" />
     <Compile Include="BrowserHost.cs" />
-    <Compile Include="IntegrationTestsRegistration.cs" />
+    <Compile Include="IntegrationTests.Registration.cs" />
     <Compile Include="Models\RegistrationUser.cs" />
     <Compile Include="Pages\HomePage\HomePage.cs" />
     <Compile Include="Pages\HomePage\HomePageMap.cs" />
@@ -110,7 +111,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <Compile Include="IntegrationTestsLogin.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
