--- a/Blog-Skeleton/BlogIntegrationTests/App.config
+++ b/Blog-Skeleton/BlogIntegrationTests/App.config
@@ -2,8 +2,8 @@
 <configuration>
   <appSettings>
     <add key="URL" value="http://localhost:60634/Article/List/" />
-    <add key="TestDataSheetPath" value="C:\Users\eva3\Documents\Visual Studio 2015\Projects\Blog.Skeleton\Blog.Skeleton\Blog-Skeleton\BlogIntegrationTests\DataDrivenTests\" />
-    <add key="Logs" value="C:\Users\eva3\Documents\Visual Studio 2015\Projects\Blog.Skeleton\Blog.Skeleton\Blog-Skeleton\BlogIntegrationTests\Logs\" />
+    <add key="TestDataSheetPath" value="C:\Users\eva3\Documents\Visual Studio 2015\Projects\Blog.Skeleton\Blog-Skeleton\BlogIntegrationTests\DataDrivenTests\" />
+    <add key="Logs" value="C:\Users\eva3\Documents\Visual Studio 2015\Projects\Blog.Skeleton\Blog-Skeleton\BlogIntegrationTests\Logs\" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
