Testes moved to correct project tests

--- a/Blog-Skeleton/Blog.UI.Tests/app.config
+++ b/Blog-Skeleton/Blog.UI.Tests/app.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <add key="URL" value="http://localhost:60634/Article/List/" />
+    <add key="TestDataSheetPath" value="C:\Users\eva3\Documents\Visual Studio 2015\Projects\Blog.Skeleton\Blog-Skeleton\Blog.UI.Tests\DataDrivenTests\" />
+    <add key="Logs" value="C:\Users\eva3\Documents\Visual Studio 2015\Projects\Blog.Skeleton\Blog-Skeleton\Blog.UI.Tests\Logs\" />
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
