--- a/Blog-Skeleton/BlogIntegrationTests/Blog.Integration.Tests.csproj
+++ b/Blog-Skeleton/BlogIntegrationTests/Blog.Integration.Tests.csproj
@@ -92,21 +92,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IntegrationTestsLogin.cs" />
-    <Compile Include="Models\AccessExcelData.cs" />
-    <Compile Include="Models\LoginUser.cs" />
-    <Compile Include="Pages\BasePage.cs" />
+    <Compile Include="IntegrationTestsNavigations.cs" />
+    <Compile Include="BasePage.cs" />
     <Compile Include="BrowserHost.cs" />
-    <Compile Include="IntegrationTests.Registration.cs" />
-    <Compile Include="Models\RegistrationUser.cs" />
-    <Compile Include="Pages\HomePage\HomePage.cs" />
-    <Compile Include="Pages\HomePage\HomePageMap.cs" />
-    <Compile Include="Pages\LoginPage\LoginPage.cs" />
-    <Compile Include="Pages\LoginPage\LoginPageAsserter.cs" />
-    <Compile Include="Pages\LoginPage\LoginPageMap.cs" />
-    <Compile Include="Pages\RegistrationPage\RegistrationPage.cs" />
-    <Compile Include="Pages\RegistrationPage\RegistrationPageAsserter.cs" />
-    <Compile Include="Pages\RegistrationPage\RegistrationPageMap.cs" />
+    <Compile Include="IntegrationTestsLoads.cs" />
+    <Compile Include="Pages\SitePages.cs" />
+    <Compile Include="Pages\SitePagesMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -116,10 +107,7 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DataDrivenTests\" />
-    <Folder Include="Logs\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.2.29.0\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.2.29.0\build\Selenium.WebDriver.ChromeDriver.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
