--- a/Blog-Skeleton/Blog.UI.Tests/Blog.UI.Tests.csproj
+++ b/Blog-Skeleton/Blog.UI.Tests/Blog.UI.Tests.csproj
@@ -94,9 +94,13 @@
   <ItemGroup>
     <Compile Include="BrowserHost.cs" />
     <Compile Include="Models\AccessExcelData.cs" />
+    <Compile Include="Models\BlogPage.cs" />
     <Compile Include="Models\LoginUser.cs" />
     <Compile Include="Models\RegistrationUser.cs" />
     <Compile Include="Pages\BasePage.cs" />
+    <Compile Include="Pages\CreatePost\CreatePost.cs" />
+    <Compile Include="Pages\CreatePost\CreatePostAsserter.cs" />
+    <Compile Include="Pages\CreatePost\CreatePostMap.cs" />
     <Compile Include="Pages\HomePage\HomePage.cs" />
     <Compile Include="Pages\HomePage\HomePageMap.cs" />
     <Compile Include="Pages\LoginPage\LoginPage.cs" />
@@ -105,6 +109,7 @@
     <Compile Include="Pages\RegistrationPage\RegistrationPage.cs" />
     <Compile Include="Pages\RegistrationPage\RegistrationPageAsserter.cs" />
     <Compile Include="Pages\RegistrationPage\RegistrationPageMap.cs" />
+    <Compile Include="UITestsCreatePost.cs" />
     <Compile Include="UITestsLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
