--- a/Blog-Skeleton/Blog.UI.Tests/Blog.UI.Tests.csproj
+++ b/Blog-Skeleton/Blog.UI.Tests/Blog.UI.Tests.csproj
@@ -101,6 +101,9 @@
     <Compile Include="Pages\CreatePost\CreatePost.cs" />
     <Compile Include="Pages\CreatePost\CreatePostAsserter.cs" />
     <Compile Include="Pages\CreatePost\CreatePostMap.cs" />
+    <Compile Include="Pages\EditPost\EditPost.cs" />
+    <Compile Include="Pages\EditPost\EditPostAsserter.cs" />
+    <Compile Include="Pages\EditPost\EditPostMap.cs" />
     <Compile Include="Pages\HomePage\HomePage.cs" />
     <Compile Include="Pages\HomePage\HomePageMap.cs" />
     <Compile Include="Pages\LoginPage\LoginPage.cs" />
@@ -110,6 +113,7 @@
     <Compile Include="Pages\RegistrationPage\RegistrationPageAsserter.cs" />
     <Compile Include="Pages\RegistrationPage\RegistrationPageMap.cs" />
     <Compile Include="UITestsCreatePost.cs" />
+    <Compile Include="UITestsEditPost.cs" />
     <Compile Include="UITestsLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
