Delete Post Tests are ready

--- a/Blog-Skeleton/Blog.UI.Tests/Blog.UI.Tests.csproj
+++ b/Blog-Skeleton/Blog.UI.Tests/Blog.UI.Tests.csproj
@@ -101,6 +101,9 @@
     <Compile Include="Pages\CreatePost\CreatePost.cs" />
     <Compile Include="Pages\CreatePost\CreatePostAsserter.cs" />
     <Compile Include="Pages\CreatePost\CreatePostMap.cs" />
+    <Compile Include="Pages\DeletePost\DeletePost.cs" />
+    <Compile Include="Pages\DeletePost\DeletePostAsserter.cs" />
+    <Compile Include="Pages\DeletePost\DeletePostMap.cs" />
     <Compile Include="Pages\EditPost\EditPost.cs" />
     <Compile Include="Pages\EditPost\EditPostAsserter.cs" />
     <Compile Include="Pages\EditPost\EditPostMap.cs" />
@@ -112,6 +115,7 @@
     <Compile Include="Pages\RegistrationPage\RegistrationPage.cs" />
     <Compile Include="Pages\RegistrationPage\RegistrationPageAsserter.cs" />
     <Compile Include="Pages\RegistrationPage\RegistrationPageMap.cs" />
+    <Compile Include="UITestDeletePost.cs" />
     <Compile Include="UITestsCreatePost.cs" />
     <Compile Include="UITestsEditPost.cs" />
     <Compile Include="UITestsLogin.cs" />
