--- a/Blog-Skeleton/BlogIntegrationTests/Blog.Integration.Tests.csproj
+++ b/Blog-Skeleton/BlogIntegrationTests/Blog.Integration.Tests.csproj
@@ -107,7 +107,12 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Blog.UI.Tests\Blog.UI.Tests.csproj">
+      <Project>{8bca506b-b263-4e1c-beac-1bb2df35b2a7}</Project>
+      <Name>Blog.UI.Tests</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.2.29.0\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.2.29.0\build\Selenium.WebDriver.ChromeDriver.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
